# paper_analysis

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: application_taxonomy.yaml  chinese_queries.yaml  disease_taxonomy.yaml  model_keywords.yaml  queries.yaml  report_config.yaml
docs/: 00-当前实现状态.md  01-需求分析.md  02-概要设计.md  03-状态机设计.md  04-接口命令.md  04-接口命令设计.md  05-WebUI设计.md  06-中文数据源与CAJ处理.md  07-工程风险与实施策略.md  08-工作计划.md
src/: __init__.py  cli.py
src/analysis/: __init__.py  evidence_classifier.py  keywords.py
src/collectors/: __init__.py  pubmed.py
src/domain/: __init__.py  status.py
src/reports/: evidence.py  simple.py
src/storage/: __init__.py  database.py  repository.py  schema.sql
src/utils/: __init__.py  http.py  normalizers.py
tests/: test_docs.py  test_evidence_classifier.py  test_http.py  test_keywords.py  test_normalizers.py  test_pubmed.py  test_reports.py  test_storage.py
