[project]
name = "paper-analysis"
version = "0.1.0"
description = "Literature intelligence database for genOway / 基锘威 related animal model papers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
